update readme file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
     <span>BTC/USD: <b>{{btcToUsd}}</b> </span>
     <span>USD/EUR: <b>{{usdToEur}}</b> </span>
     <span>BTC/EUR: <b>{{btcToEur}}</b> </span>
-    <span><b><i>Active sources:</i></b> </span>
+    <span style="margin-left: 20px"><b><i>Active sources:</i></b> </span>
     <span>BTC/USD: <b>{{btcToUsdSourcesInfo}}</b> </span>
     <span>USD/EUR: <b>{{usdToEurSourcesInfo}}</b> </span>
     <span>BTC/EUR: <b>{{btcToEurSourcesInfo}}</b> </span>
